test/invalid/prop-polymorphic-assign.js
var o2 =  { method: function(x) { return x; }, jank: [] };

o2.jank[0] = 3;
o2.jank[1] = 'a';
